# rust-ecs

./: Cargo.toml  Readme.md
src/: data.rs  generate.rs  main.rs  mod.rs  store.rs  systems.rs  types.rs
src/primitives/: line.rs
